# oed

./: .gitignore  README.md  dune  dune-project  oed.opam
lib/: dune  editor_io.ml  editor_state.ml  file.ml  file.mli  gap_buffer.ml  gap_buffer.mli  key.ml  key.mli  mode.ml  mode.mli  text_buffer.ml  text_buffer.mli
test/: dune  test.ml
